--- a/Financial Control/project/public/index.html
+++ b/Financial Control/project/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="module" src="./js/index.js"></script>
+    <script type="module" src="./js/index"></script>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" type="image/x-icon" href="./img/logo-icon.png" />
     <script src="https://accounts.google.com/gsi/client" async></script>
