--- a/Financial Control/project/public/index.html
+++ b/Financial Control/project/public/index.html
@@ -15,7 +15,7 @@
     <div class="centered-div">
         <a href="/"><img src="./img/logo.png" alt="Login" id="logo"></a>
         <div class="sign-up">
-            <label for="logo">Don't have an account? <a href="/signup">Sign up</a></label>
+            <label for="logo">Don't have an account? <a href="./signup.html">Sign up</a></label>
         </div>
 
         <div class="username">
@@ -31,7 +31,7 @@
 
         <div class="options">
             <a href="#" id="showPassword">Show password</a>
-            <a href="/forgot" id="forgotPassword">Forgot my password</a>
+            <a href="./forgot.html" id="forgotPassword">Forgot my password</a>
         </div>
 
         <div class="remember">
