--- a/Financial Control/project/public/signup.html
+++ b/Financial Control/project/public/signup.html
@@ -20,12 +20,12 @@
 
         <div class="name">
             <label for="name">Name</label>
-            <input type="text" name="name" id="name" placeholder="Fill in your name." />
+            <input type="text" name="name" id="name" placeholder="Fill in your name." maxlength="100"/>
         </div>
 
         <div class="username">
             <label for="username">Email</label>
-            <input type="username" name="username" id="username" placeholder="This will be your username." />
+            <input type="email" name="username" id="username" placeholder="This will be your username." />
         </div>
 
         <div class="password">
