--- a/Financial Control/project/public/forgot.html
+++ b/Financial Control/project/public/forgot.html
@@ -12,7 +12,7 @@
     <div class="centered-div">
         <a href="/"><img src="./img/logo.png" alt="Login" id="logo"></a>
         <div class="sign-up">
-            <label for="logo">Let's recover your password!</label>
+            <label for="logo">Let's recover your account!</label>
         </div>
 
         <div class="username">
@@ -20,7 +20,7 @@
             <input type="email" name="email" id="email" required placeholder="Please fill in the registered email." />
         </div>
 
-        <button type="submit" id="change" disabled>Change Password</button>
+        <button type="submit" id="reset" disabled>Reset Password</button>
     </div>
 </body>
 </html>
